style: fix spacing collection activities

--- a/src/containers/GenerativeProjectDetail/ActivityStats/ActivityStats.module.scss
+++ b/src/containers/GenerativeProjectDetail/ActivityStats/ActivityStats.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  flex: 1.2;
+  // flex: 1.2;
 
   &_header {
     position: relative;
